Begin create basic website

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" type ="text/css" href="app.css">
 </head>
 <body>
-    <div id="wrapper">
-        <div id="pushNotification"></div>
+    <div id="wrapper columns">
+        <div class="col-10 m-auto">
+            <div id="pushNotification"></div>
 
-        <div id="navbar"></div>
+            <div id="navbar"></div>
 
-        <div id="content"></div>
+            <div id="content"></div>
 
-        <div id="footer"></div>
+            <div id="footer"></div>
+        </div>
     </div>
 </body>
 </html>
