--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JORD</title>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
     <link rel="stylesheet" type ="text/css" href="app.css">
 </head>
 <body>
-    <div id="wrapper columns">
+    <div id="wrapper" class="columns">
         <div class="col-10 m-auto">
-            <div id="pushNotification"></div>
-
-            <div id="navbar"></div>
-
             <div id="content"></div>
-
-            <div id="footer"></div>
         </div>
     </div>
 </body>
