--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="wrapper columns">
-        <div class="col-10 m-auto">
+        <div class="">
             <div id="pushNotification"></div>
 
             <div id="navbar"></div>
 
-            <div id="content"></div>
+            <div id="content" class="col-10 m-auto "></div>
 
             <div id="footer"></div>
         </div>
