--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JORD</title>
     <script src="script.js" type="text/javascript"></script>
-    <link rel="stylesheet" type ="text/css" href="app.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+          crossorigin=""/>
+    <script async="" src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+            crossorigin=""></script>
+    <link rel="stylesheet" type="text/css" href="app.css">
+
 </head>
 <body>
-    <div id="wrapper columns">
-        <div class="">
-            <div id="pushNotification"></div>
+<div id="wrapper columns">
+    <div class="">
+        <div id="pushNotification"></div>
 
-            <div id="navbar"></div>
+        <div id="navbar"></div>
 
-            <div id="content" class="col-10 m-auto "></div>
+        <div id="content" class="col-10 m-auto "></div>
 
-            <div id="footer"></div>
-        </div>
+        <div id="footer"></div>
     </div>
+</div>
 </body>
 </html>
