creation des pages manquantes

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<div id="wrapper" class="col-8 m-auto mygreybox">
+<div id="wrapper" class="col-8 m-auto mygreybox my-2 py-2">
     <div class="">
         <div id="content"></div>
     </div>
