modofication de l'thtml, creation des rals pour le config

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 
 </head>
 <body>
-<div id="wrapper" class="col-8 m-auto mygreybox my-2 py-2">
-    <div class="">
+<div id="wrapper" class="col-8 col-sm-12 col-md-12 m-auto mygreybox my-2 py-2">
+    <div class="col-sm-11 m-auto">
         <div id="content"></div>
     </div>
 </div>
