--- a/public/assets/structures.html
+++ b/public/assets/structures.html
@@ -1,15 +1,4 @@
-<div data-id="confirmRegister"><div id="emailBody">
-    <h1>Merci de votre inscription,</h1>
-
-    <p>vous êtes désormais inscrit sur notre site, vous pouvez dès maintenant vous connecter.</p>
-
-    <p>A très vite,</p>
-    <p><strong>L'équipe du site</strong></p>
-</div>
-</div><div data-id="orderInProgress"><div id="emailBody">
-    <h1>Bonjour, </h1>
-    <p>Merci de votre intention d'achat sur notre site, si vous rencontrer des problèmes pour le paiement de votre commande merci de vous rapprocher de notre service client.</p>
-</div></div><div data-id="401"><h1>Accés refusé<small>erreur 401</small></h1>
+<div data-id="401"><h1>Accés refusé<small>erreur 401</small></h1>
 </div><div data-id="404"><h1>Page non trouvée<small>erreur 404</small></h1>
 </div><div data-id="aidealapose"><h1 class="my-2 py-2">Besoin d'aide ?</h1>
 <div class="h5 my-4">Nos professionnels vous fournisse une notice complète d'installation !</div>
@@ -2533,4 +2522,15 @@
     </div>
 
 </div>
+</div><div data-id="confirmRegister"><div id="emailBody">
+    <h1>Merci de votre inscription,</h1>
+
+    <p>vous êtes désormais inscrit sur notre site, vous pouvez dès maintenant vous connecter.</p>
+
+    <p>A très vite,</p>
+    <p><strong>L'équipe du site</strong></p>
 </div>
+</div><div data-id="orderInProgress"><div id="emailBody">
+    <h1>Bonjour, </h1>
+    <p>Merci de votre intention d'achat sur notre site, si vous rencontrer des problèmes pour le paiement de votre commande merci de vous rapprocher de notre service client.</p>
+</div></div>
